Changes in version 1.1.4

o diacritic characters bug fux in `qwerty.dist`

o temporary bug fix in `correct.changes` (see code)


Changes in version 1.1.3

o fixed fatal bug in `correct.changes`


Changes in version 1.1.2

o updates to documentation

o fixed obnoxious message bug in `textcleaner` function

o changed progress bar in `spell.check.dictionary` to display words done out of words in total (rather than percentage)

o updated citation (PsyArXiv)

o added vignettes for preprocessing and estimating semantic networks


Changes in version 1.1.1

o `equate` now handles any number of groups (`equate.multi` is defunct and merged into `equate`)

o added a group variable for the dataset 'open.animals'

o removed option to save appendix dictionary to package (not allowed by CRAN policies)

o added a general function to read in common types of data file extensions: `read.data`

o updated `textcleaner` to bypass double query for adding a dictionary

o bug fixes in `textcleaner` and `spell.check.dictionary`

o updated `singularize` and `pluralize` rule sets

o removed `autoConverge` and `autoDestr` functions

o changed `corr.chn` to `correct.changes`


Changes in version 1.1.0

o cleaned up examples and removed unnecessary datasets ('convmat', 'rmat', and 'trial')

o updated `spell.check.dictionary` to automate continuous string selection when continuous response length is greater than maximum continuous string length in dictionary

o changed output to have quotes around words being asked to add into dictionary to decipher whether they are a string or separate words

o updated `splitstr.check` so responses are not repeated after they've been corrected. Also no longer asks to split responses that are in the dictionary (splits them automatically)

o updated `word.check.wrapper` so that 10 responses are always given if the original response is not auto-corrected
